fix: propertyref cache and checkstyle